Progression doc amended & horizontal scrollbar fix

--- a/packages/progression/src/scss/_component.scss
+++ b/packages/progression/src/scss/_component.scss
@@ -6,7 +6,7 @@
     display: flex;
     list-style: none;
     margin: 0 1.5rem;
-    padding: 0;
+	padding: 0;
 
 	&__step {
 		display: flex;
@@ -72,10 +72,13 @@
 			color: $uq-neutral-dark80;
 			display: block;
 			line-height: 1.2;
-			position: relative;
-			margin: 2px -25px 0;
-			margin: .125rem -1.5625rem 0;
+			position: absolute;
+			top: 2.75rem;
+			left: 50%;
+			transform: translateX(-50%);
+			margin: 0 auto;
 			text-align: center;
+			white-space: nowrap;
 		}
 	}
 
